dev: fix collapse background in navbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,21 +38,11 @@
         color: #80e3ff;
       }
 
-      .navbar-nav {
+      @media screen and (max-width: 768px) {
+        z-index: 1;
+        background-color: black;
         text-align: center;
       }
-
-      // @media screen and (max-width: 768px) {
-      //   position: absolute;
-      //   z-index: 1;
-      //   background-color: black;
-      //   text-align: center;
-  
-      //   .nav-link {
-      //     position: relative;
-      //     left: 8px;
-      //   }
-      // }
     }
   }
 
